# mod_io_downloader

./: .gitignore  README.md  example_config.ini  pyproject.toml  requirements.txt
dw/: __main__.py
mod_io_downloader/: __main__.py  config_parser.py  game_config_parser.py  models.py
src/mod_io_downloader/: __main__.py  app_config.py  game_config_parser.py  mod_io.py  models.py
